--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="timelinelayout.css" />
 </head>
 <body>
-<h1 class="yeartitle">Mr Thawley's Technology Timeline</h1>
+<h1 class="yeartitle">Thawley's Technology Timeline</h1>
     <div class="timeline">
         
         <div class="container left">
