Finished 3 page site
Site about Gaming

--- a/pc.html
+++ b/pc.html
@@ -14,9 +14,9 @@
         <a href="consoles.html">Consoles</a>
     </div>
     <div class="mainContent">
-        <h2>All about Gaming!</h2>
-        <p>On this site you will find all the information that you want about gaming on PC and Consoles that I find interesting.</p>
-        <img src="images/vs.jpeg">
+        <h2>PCs</h2>
+        <p>PCs are customisable and allow for greater control using the keyboard and mouse.</p>
+        <img src="images/keyboard.jpg">
     </div>
 </div>
         </div>
